# hangar

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
bench/: run.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: archive.rs  codec.rs  crypto.rs  error.rs  format.rs  lib.rs
crates/gui/: Cargo.toml  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/icons/: icon.icns
crates/gui/src/: main.rs
crates/gui/ui/: i18n.js  index.html  main.js  style.css
