[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/gui"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Yahya Tanışık"]
repository = ""

[workspace.dependencies]
hangar-core = { path = "crates/core" }

# release profile tuned for size + speed; the binary is the product
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
