[package]
name = "hangar-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "hgr"
path = "src/main.rs"

[dependencies]
hangar-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
rpassword = "7"
